--- a/app/views/trials/_trials_table.html.haml
+++ b/app/views/trials/_trials_table.html.haml
@@ -1,7 +1,7 @@
 - if trials.present?
   %h3= header
   .table-responsive.no-min-height
-    %table.table
+    %table.table.trials-table
       %thead
         %tr
           %th= t(:title)
